# MokLib

./: .gitignore  Arg.cpp  Arg.h  Arguments.cpp  Arguments.h  Base.h  Bit.h  CMakeLists.txt  Compile.inc  Config.h  Console.h  Debugging.h  Defer.h  Delegates.cpp  Delegates.h  Error.h  Hashing.cpp  Hashing.h  Host.h  Interfaces.h  LICENSE  Lib.natvis  Log.cpp  Log.h  MulticastDelegate.h  Numeric.h  Parsing.cpp  Parsing.h  README.md  RedirectTape.h  Reflection.cpp  Reflection.h  Result.h  SliceTape.h  Sort.h  Str.cpp  Str.h  StringBuilder.cpp  StringBuilder.h  StringFormat.cpp  (+13 more)
Compat/: Direct3D.h  GLFWVirtualKeycodes.h  Metadesk.h  OpenGL.h  UnixFileSystem.h  UnixInternal.inc  Win32.h  Win32Base.h  Win32Extra.h  Win32FileSystem.h  Win32Internal.inc  Win32VirtualKeycodes.h
Containers/: Array.h  ArrayIterator.h  Bitset.h  Extras.h  FSM.h  List.h  Map.h  Set.h  Slice.h
Converters/: Converters.inc  ImageConverter.cpp  ImageConverter.h
Debugging/: Assertions.h  Backtrace.cpp  Backtrace.h  Base.h  DebugOutput.cpp  DebugOutput.h
Examples/: Basic.cpp  Build.bat  Build.sh  Delegates.cpp  ElfDebugSymbols.cpp  FileSystem.cpp  FloatStruct.json  Importers.cpp  Memory.cpp  Reflection.cpp  Tests.cpp  build.bat
Examples/RAI/: glfw-gl33.cpp
Exporters/: Exporters.cpp  Exporters.h
Extras/: Elf.cpp  Elf.h
FileSystem/: DirectoryIterator.cpp  DirectoryIterator.h  Dll.cpp  Dll.h  Extras.h  FileSystem.cpp  FileSystem.h
Importers/: Import.h  Importer.cpp  Importer.h  Importers.inc
Importers/Image/: BMP.cpp  BMP.h  BMPInternal.h  Image.h  LibPNG.cpp  LibPNG.h  WindowsImagingComponent.cpp  WindowsImagingComponent.h
Importers/Model/: Model.h  OBJ.cpp  OBJ.h
Importers/Object/: JSON.cpp  JSON.h
InlineData/: Cube.inc  Plane.inc
Math/: Base.h  CG.h  Color.h  Compat.h  Scaling.h  Shapes.h  Types.h
Memory/: AllocTape.h  Arena.cpp  Arena.h  Base.cpp  Base.h  Cache.cpp  Cache.h  Extras.h  New.h  Pool.cpp  Pool.h  RawBuffer.h  Sentry.cpp  Sentry.h  Var.cpp  Var.h
Platform/: Keycodes.cpp  Keycodes.h  RAI.h  RAIOpenGL33.cpp  RAIOpenGL33.h
Premake/: Base.lua  PkgConfigBridge.lua
Scripts/: 0 - Build.bat  1 - Configure.bat
Serialization/: Base.h  JSON.cpp  JSON.h
Test/: Base.cpp  Base.h  Compile.inc  Test.h
Tests/: Arena.test.cpp  Arg.test.cpp  Build.sh  CMakeLists.txt  Cache.test.cpp  FileSystem.test.cpp  JSON.test.cpp  Lib.cpp  Map.test.cpp  Result.test.cpp  Sort.test.cpp  Str.test.cpp  Tape.bench.cpp  Tape.test.cpp  Tests.cpp  Tests.h  TimerGroup.test.cpp  Types.test.cpp
Thread/: Atomic.h  Job.cpp  Job.h  Mutex.cpp  Mutex.h  Process.cpp  Process.h  Semaphore.cpp  Semaphore.h  Thread.cpp  Thread.h  ThreadContext.cpp  ThreadContext.h  TimerQueue.cpp  TimerQueue.h
Time/: TImerGroup.h  Time.cpp  Time.h  TimerGroup.cpp  TimerGroup.h
